// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`operator primitives snapshots > Card 1`] = `
<div
  class="group relative rounded-lg bg-card text-card-foreground shadow-sm hover:shadow-md border-l-2 border-l-transparent transition-[border-color] duration-200 hover:border-l-tertiary p-3"
>
  Child
</div>
`;

exports[`operator primitives snapshots > Card featured 1`] = `
<div
  class="group relative rounded-lg bg-card text-card-foreground shadow-sm hover:shadow-md border-l-2 border-l-transparent transition-[border-color] duration-200 hover:border-l-tertiary border-t-2 border-t-tertiary p-3"
>
  Featured
</div>
`;

exports[`operator primitives snapshots > ClaimRow 1`] = `
<div
  class="flex gap-3 py-2"
>
  <span
    aria-label="flagged claim"
    class="inline-block size-2 shrink-0 rounded-full bg-destructive mt-1.5"
    role="img"
  />
  <div
    class="min-w-0 flex-1 space-y-1"
  >
    <div
      class="flex flex-wrap items-start gap-2"
    >
      <p
        class="font-sans text-[15px] leading-snug text-foreground"
      >
        Claim text for HD 32.
      </p>
      <span
        class="inline-flex items-center gap-1 rounded-md bg-destructive/10 px-1.5 py-0.5 font-sans text-xs font-semibold text-destructive"
        title="Flagged in adversarial review"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-triangle-alert size-3.5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
          />
          <path
            d="M12 9v4"
          />
          <path
            d="M12 17h.01"
          />
        </svg>
        Adversarial
      </span>
    </div>
  </div>
</div>
`;

exports[`operator primitives snapshots > EmptyState 1`] = `
<p
  class="font-serif text-base italic leading-relaxed text-muted-foreground"
>
  No rows for this filter.
</p>
`;

exports[`operator primitives snapshots > KpiTile 1`] = `
<div
  class=""
>
  <p
    class="font-sans text-3xl font-semibold tabular-nums tracking-tight text-primary"
  >
    42
  </p>
  <span
    class="font-sans text-[12px] font-bold uppercase tracking-[0.2em] text-muted-foreground mt-2 block"
  >
    Open items
  </span>
</div>
`;

exports[`operator primitives snapshots > MetaLabel 1`] = `
<span
  class="font-sans text-[12px] font-bold uppercase tracking-[0.2em] text-muted-foreground"
>
  Source
</span>
`;

exports[`operator primitives snapshots > Portrait initials 1`] = `
<div
  aria-label="Hagen"
  class="flex items-center justify-center rounded-full bg-muted font-serif text-lg font-semibold text-muted-foreground"
  role="img"
  style="width: 48px; height: 48px;"
>
  <span
    aria-hidden="true"
  >
    JH
  </span>
</div>
`;

exports[`operator primitives snapshots > SectionHeader 1`] = `
<h2
  class="font-serif text-xl font-semibold tracking-tight text-primary sm:text-2xl"
>
  Justice Hagen dossier
</h2>
`;

exports[`operator primitives snapshots > SourceCite 1`] = `
<p
  class="flex min-w-0 items-center gap-1 font-sans text-sm text-muted-foreground"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-chevron-right size-4 shrink-0 text-tertiary"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m9 18 6-6-6-6"
    />
  </svg>
  <a
    class="min-w-0 truncate text-foreground underline-offset-4 hover:underline"
    href="https://vote.utah.gov/vote/menu.xhtml"
    rel="noreferrer"
    target="_blank"
  >
    vote.utah.gov
  </a>
  <span
    class="shrink-0 tabular-nums text-muted-foreground"
  >
    · 
    Apr 21, 2026, 2:00 PM
  </span>
</p>
`;

exports[`operator primitives snapshots > StatusDot 1`] = `
<span
  aria-label="pending claim"
  class="inline-block size-2 shrink-0 rounded-full bg-chart-5"
  role="img"
/>
`;
